fix version info alignment

--- a/scopes/component/ui/version-dropdown/version-info/version-info.module.scss
+++ b/scopes/component/ui/version-dropdown/version-info/version-info.module.scss
@@ -16,6 +16,8 @@
   }
   .versionName {
     padding: 0px 8px;
+    align-self: center;
+    line-height: 14px;
   }
 }
 .versionLine {
